# radare2-bindings

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  autogen.sh  check-langs.sh  cherrypull.sh  config.mk.acr  configure  configure-langs  configure.acr  do-swig.sh  genbind.py  libs.mk  mp.py  python-config-wrapper  python-wrapper  rules.mk
c/: Makefile  README.md  test-bin.c
csharp/: Makefile  test-main.cs
ctypes/: MANIFEST.in  Makefile  README.md  setup.py  test-asm.py  test-bin-orig.py  test-bin.py  test-core.py
gir/: Makefile
go/: .gitignore  Makefile  fixgoswig.sh  goenv.sh  inject-cgo.sh  test-r_bin.go
java/: Makefile  TestRBin.java
jna/: AsmExample.java  HelloJNA.java  Makefile  RAsm.java  RAsmCode.java  README.md  example.java
libr/: Makefile
node-ffi/: Makefile  README.md  index.js  package-lock.json  package.json
node-r2js/: index.js  test.js
node-swig/: Makefile
ocaml/: Makefile
perl/: test-r_asm.pl  test-r_bin.pl  test-r_bp.pl
php5/: test-r_core.php
python/: Makefile  remote.py  test-leak.py  test-pdcbug.py  test-r_anal.py  test-r_bin.py  test-r_bp.py  test-r_core.py  test-r_debug.py  test-ragdiff2.py  test-rap-client.py  test-rap-server.py
python-swig/: Makefile  r_core.i  test.py
r2api/: README.md  setup.py
r2libr/: Makefile  README.md  setup.py
ruby/: test-r_bin.rb  test-r_core.rb
rust/: HACKING.md  README.md
rust/radare2-build/: Cargo.toml  build.rs
rust/radare2-build/src/: lib.rs
vapi/: Makefile  libr.deps  r_anal.vapi  r_asm.deps  r_asm.vapi  r_bin.deps  r_bin.vapi  r_bp.vapi  r_cmd.vapi  r_cons.vapi  (+20 more)
(+171 files in other folders)
