[package]
name = "radare-build"
version = "0.0.1"
authors = ["pancake <pancake@nopcode.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/radare2/radare2-bindings"
description = "Build support for the Radare2 Rust bindings"

# [dependencies]
# reqwest = { version = "0.11.3", features = ["blocking"] }
# xz = "0.1.0"
# tar = "0.4.33"
